--- a/egret/css/style.css
+++ b/egret/css/style.css
@@ -398,10 +398,10 @@ left: calc(50% - 110px);
 	box-shadow: 0px 0px 10px rgba(110, 110, 110, 0.5);
 }
 
-.single-feature .feature-image {
-
+.gallery-area li i{
+	font-size:30px;
+	margin-top:50px;
 }
-
 
 .features-control {
 	margin: auto;
@@ -1096,4 +1096,25 @@ margin-right: 8px;
 /*details area*/
 .details-area h3{
 	padding: 0;
+}
+
+/*modal*/
+.modal-content{
+	border-radius:3px;
+	background: #333;
+}
+
+.modal-content label{
+	font-weight: 300;
+}
+
+.modal-content .form-control{
+	background: #d4d4d4;
+	border-radius:3px;
+}
+
+.modal-content .form-control:focus {
+    border:1px solid transparent;
+    box-shadow: none;
+    outline: 0 none;
 }
